2009-11-16  Kenneth Russell  <kbr@google.com>

        Reviewed by Oliver Hunt.

        Update API of WebGLArray and friends
        https://bugs.webkit.org/show_bug.cgi?id=31175

        * src/GraphicsContext3D.cpp:
        (WebCore::GraphicsContext3D::bufferData):
        (WebCore::GraphicsContext3D::bufferSubData):

2009-11-15  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, build fix.

        Correct an error in the previous commit

        * public/WebAccessibilityRole.h: It should be WebAccessibilityRoleDirectory,
          not WebAccessibilityDirectoryRole.

2009-11-15  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, build fix.

        Bring WebAccessibilityRole up to sync after
        http://trac.webkit.org/changeset/51007.

        * public/WebAccessibilityRole.h: Added WebAccessibilityRoleDirectory.
        * src/AssertMatchingEnums.cpp: Added a match between DirectoryRole and
          WebAccessibilityRoleDirectory.

2009-11-13  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, build fix.

        [Chromium] Rename windowObjectCleared to dispatchDidClearWindowObjectInWorld
        to catch up http://trac.webkit.org/changeset/50973.

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::dispatchDidClearWindowObjectInWorld):
        * src/FrameLoaderClientImpl.h:

2009-11-13  Yaar Schnitman  <yaar@chromium.org>

        Reviewed by Dimitri Glazkov.

        Chromium WebKit Port to compile as dynamic lib

        https://bugs.webkit.org/show_bug.cgi?id=31478

        * WebKit.gyp:

2009-11-13  Aaron Boodman  <aa@chromium.org>

        Reviewed by Eric Seidel.

        Adds a way to get the document element's scrollHeight,
        which is sort of the moral equivalent to
        RenderBox::minPrefWidth().

        https://bugs.webkit.org/show_bug.cgi?id=31036

        * public/WebFrame.h: Declare documentElementScrollHeight()
        * src/WebFrameImpl.h: Ditto